Style: add z-index to modal to fix scroll-to-top button  overlay problem.

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -497,6 +497,7 @@ ul#nav li.current a { color: #F06000; }
       max-height: 68vh;
       padding: 10px;
       transform: translate(-50%, -50%) scale(1);
+      z-index: 1000;
 }
 
 .modal-header {
@@ -966,6 +967,7 @@ footer .social-links li:first-child { margin-left: 0; }
 
 /* Go To Top Button */
 #go-top {
+   display: inline-block;
 	position: absolute;
 	top: -24px;
    left: 50%;
